--- a/.github/ISSUE_TEMPLATE/new_post.yml
+++ b/.github/ISSUE_TEMPLATE/new_post.yml
@@ -1,21 +1,27 @@
 name: 投稿年终总结
 description: 在这里发起新的 issue 以投稿您的年终总结
-title: "[New]:"
+title: "[New]: "
+assignees:
+  - octocat
 body:
   - type: markdown
     attributes:
-    value: |
-      感谢您的投稿！
-  
-      **请在 issues 标题处填写您的文章标题与网站名称，两者之间使用` - `隔开**
+      value: |
+        感谢你的投稿
+        
+        **请在 issue 标题处填写您的文章标题和网站名称，两者之间使用` - `隔开**
   - type: input
     id: post_url
     attributes:
       label: 文章链接
+      description: 
       placeholder: https://example.com/
-      validations:
-        required: true
+    validations:
+      required: true
   - type: input
     id: archive_url
-    label: 存档链接
-    description: 请填写你在 [IA](https://web.archive.org/save) 或 [AT](https://archive.today) 上的存档链接
+    attributes:
+      label: 存档链接
+      description: 请填写你在 [IA](https://web.archive.org/save) 或 [AT](https://archive.today) 上的存档链接
+    validations:
+      required: false
